@@ -25,6 +25,8 @@ Version 1.11.1+svn:
  * Language and i18n:
    * Updated translations: British English, Galician, Italian, Portuguese,
      Portuguese (Brazil)
+ * Lua API:
+   * new wesnoth.get_time_stamp() function
  * Multiplayer:
    * Moved new lobby option in Preferences -> Multiplayer to Advanced
      Preferences and clarified description
